# Execution-under-adverse-selection

./: .gitignore  README.md  pyproject.toml
reports/: DOMINANCE_REPORT.md  MISSPEC_REPORT.md  REGIME_REPORT.md  misspec_grid.csv  regime_grid.csv
scripts/: make_dominance_report.py  make_misspec_report.py  make_regime_report.py  prep.py  run_all.py  run_misspec_grid.py  run_mvp.py  run_regime_grid.py
src/execlab/: types.py
src/execlab/backtest/: mvp.py
src/execlab/metrics/: execution.py
src/execlab/sim/: market.py
src/execlab/strategy/: execution.py
tests/: test_smoke_mvp.py
