[project]
name = "execlab"
version = "0.1.0"
description = "Execution under adverse selection: simulation, strategies, and cost metrics."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
